--- a/單身占卜問題/index.html
+++ b/單身占卜問題/index.html
@@ -95,7 +95,7 @@
 
 <p>在進一步的感情發展之前，我們需要先解決好自己的問題，尋找到一個穩定和平靜的生活環境。同時，也需要堅定自己的信念和價值觀，不要過分迎合對方，讓自己更加獨立和自主。</p>
 
-<p>最後，塔羅占卜的結果可以幫助我們了解自己的感情發展趨勢和愛情運勢。根據塔羅占卜的結果，我們可以知道自己是否需要提升自己的自信和獨立性，或者是否需要更加關注自己的情感和內心深處的渴望。只有這樣，我們才能真正地找到適合自己的伴侶，迎接戀情的到來。</p>
+<p>塔羅占卜的結果可以幫助我們了解自己的感情發展趨勢和愛情運勢。根據塔羅占卜的結果，我們可以知道自己是否需要提升自己的自信和獨立性，或者是否需要更加關注自己的情感和內心深處的渴望。只有這樣，我們才能真正地找到適合自己的伴侶，迎接戀情的到來。</p>
 
 <h2>塔羅占卜能夠揭露我單身的原因嗎？</h2>
 
@@ -117,25 +117,25 @@
 
 <p>處理感情曖昧的狀況需要勇氣和堅定。你需要勇敢地面對自己的感受，並且與對方坦誠相待。在這個成長的過程中，你將會發現，曖昧不再是愛情中的毒瘤，而是成為了你與伴侶之間的共同經歷。</p>
 
-<p>首先，你需要釐清自己的需求和期望。花些時間思考和弄清楚自己真正想要的是什麼，是想要經營一段正式的伴侶關係？還是只想好好享受曖昧當下的感覺，不想被任何承諾綁住？了解自己的需求和期望，可以幫助你脫離對模糊不清狀態的焦慮。</p>
+<p>你需要釐清自己的需求和期望。花些時間思考和弄清楚自己真正想要的是什麼，是想要經營一段正式的伴侶關係？還是只想好好享受曖昧當下的感覺，不想被任何承諾綁住？了解自己的需求和期望，可以幫助你脫離對模糊不清狀態的焦慮。</p>
 
-<p>接著，你需要鼓起勇氣和對方溝通。討論你的感受、想法，以及你對這段關係的期望。這此步驟非常重要，因為它是打破模糊狀態的關鍵。你可能會得到你期望的答案，也可能會對結果失望，無論如何，只有開始溝通，才會知道對方心裡在想什麼，對方也才會知道你真實的感受，這樣雙方才能決定下一步要往哪走。</p>
+<p>你需要鼓起勇氣和對方溝通。討論你的感受、想法，以及你對這段關係的期望。這此步驟非常重要，因為它是打破模糊狀態的關鍵。你可能會得到你期望的答案，也可能會對結果失望，無論如何，只有開始溝通，才會知道對方心裡在想什麼，對方也才會知道你真實的感受，這樣雙方才能決定下一步要往哪走。</p>
 
-<p>另外，設定界限也是解決曖昧的重要因素。如果你不想進一步發展關係，那麼你需要設定明確的界限，以避免對方的期望和誤解。留出空間是處理曖昧的另一種方法。如果你感到不確定或困惑，留出一些自己的空間是很重要的。這可以幫助你更好地了解自己的感受和慾望。</p>
+<p>設定界限也是解決曖昧的重要因素。如果你不想進一步發展關係，那麼你需要設定明確的界限，以避免對方的期望和誤解。留出空間是處理曖昧的另一種方法。如果你感到不確定或困惑，留出一些自己的空間是很重要的。這可以幫助你更好地了解自己的感受和慾望。</p>
 
 <p>給自己一個期限也是必要的。曖昧關係看不到盡頭可能會讓你感到困惑和焦慮。此時請給自己一個期限，並下一個停損點。在這個期限內，無論是想要盡情的享受曖昧帶來的興奮與期待，；還是要盡最大的努力去讓關係前進，都可以，但是期限或是停損點一到，要分、要合請務必下一個決定，結束這個曖昧期。</p>
 
-<p>最後，如果這段關係無法滿足你的需求，請不要執著要它開花結果，沒有必要為了一棵樹，放棄整座森林。持續關注自己的需求、興趣和目標，探索其他的可能性，不要害怕嘗試新的事物或與新的人約會。</p>
+<p>如果這段關係無法滿足你的需求，請不要執著要它開花結果，沒有必要為了一棵樹，放棄整座森林。持續關注自己的需求、興趣和目標，探索其他的可能性，不要害怕嘗試新的事物或與新的人約會。</p>
 
 <h2>我該如何走出傷痛，面對新感情？</h2>
 
 <p>走出傷痛，面對新感情，需要時間、耐心和自我關懷。專家建議，首先要接受自己失戀後有脆弱的時刻與負面的情緒，坦然面對自己的情緒，允許自己有負面情緒。接著，練習把注意力拉回自己身上，不要花時間在埋怨、諷刺對方，已經分開的人怎麼想、怎麼做，對你而言就不重要了。</p>
 
-<p>另外，刪除對方的一切聯繫方式，包括微信、電話、郵箱等等，也是走出傷痛的重要步驟。心理學家艾斯特·佩瑞爾說：“真正的放下，是從不再聯繫開始的。”</p>
+<p>刪除對方的一切聯繫方式，包括微信、電話、郵箱等等，也是走出傷痛的重要步驟。心理學家艾斯特·佩瑞爾說：“真正的放下，是從不再聯繫開始的。”</p>
 
-<p>同時，重新設定屬於自己的生活目標，也是走出傷痛的關鍵。學會獨處，重新發掘自己的美德和魅力，相信自己可以走出失戀的陰影，重新找到自己的幸福。專家建議，失戀後，不要沉浸於往日的傷痛中，要學會忘記，忘記那些不愉快的回憶，忘記那些讓你傷心的人。</p>
+<p>重新設定屬於自己的生活目標，也是走出傷痛的關鍵。學會獨處，重新發掘自己的美德和魅力，相信自己可以走出失戀的陰影，重新找到自己的幸福。專家建議，失戀後，不要沉浸於往日的傷痛中，要學會忘記，忘記那些不愉快的回憶，忘記那些讓你傷心的人。</p>
 
-<p>最後，學會愛自己，愛護自己，愛惜自己，也是走出傷痛的重要步驟。給自己一定的空間、時間，別太苛求自己了。相信自己正在蛻變成更美好的樣子，相信未來充滿希望，練習正向思考，善用「吸引力法則」，相信自己越來越好，相信自己正在奔赴一個幸福的未來。</p>
+<p>學會愛自己，愛護自己，愛惜自己，也是走出傷痛的重要步驟。給自己一定的空間、時間，別太苛求自己了。相信自己正在蛻變成更美好的樣子，相信未來充滿希望，練習正向思考，善用「吸引力法則」，相信自己越來越好，相信自己正在奔赴一個幸福的未來。</p>
 
 <h3>如何調整思維方式</h3>
 
