--- a/塔羅問題怎麼問/index.html
+++ b/塔羅問題怎麼問/index.html
@@ -87,15 +87,15 @@
 
 <p>要得到明確的答案，塔羅問題的問法非常重要。首先，問題的焦點應該放在自己身上，而不是其他人身上。這樣可以幫助您更好地了解自己的需求和問題，從而得到更明確的答案。</p>
 
-<p>其次，問題的問法應該避免加入假設或期望。換句話說，不要在提問中暗示自己已經有了一個答案或解決方案，而是應該保持開放和中立的態度。例如，不要問「應不應該做某件事」，而是問「做某件事會有什麼結果」。</p>
+<p>問題的問法應該避免加入假設或期望。換句話說，不要在提問中暗示自己已經有了一個答案或解決方案，而是應該保持開放和中立的態度。例如，不要問「應不應該做某件事」，而是問「做某件事會有什麼結果」。</p>
 
-<p>此外，問題的內容應該明確而直接，避免模糊不清的提問方式，以免得到模糊的答案。好的問題範例是：「該怎麼做才能找到彼此契合的戀人？」而不是：「為什麼我沒有情人？」</p>
+<p>問題的內容應該明確而直接，避免模糊不清的提問方式，以免得到模糊的答案。好的問題範例是：「該怎麼做才能找到彼此契合的戀人？」而不是：「為什麼我沒有情人？」</p>
 
 <p>塔羅牌占卜並不是單純進行吉凶預兆，而是給予我們對於問題本身提供不同的見解與思考方式的對話。因此，理解自己想問的問題非常重要。問題的方式請以自己「想怎麼做？」的想法，搭配「該如何做才能加以實現」這樣的形式對策，才能得到較明確而詳細的回饋。</p>
 
-<p>另外，問題的時間設定也很重要。占卜時間最好設定不超過六個月的期限，這樣可以更清楚有效時限。例如，問「我下週的面試如何？」或「我最近三個月和家人的感情如何？」</p>
+<p>問題的時間設定也很重要。占卜時間最好設定不超過六個月的期限，這樣可以更清楚有效時限。例如，問「我下週的面試如何？」或「我最近三個月和家人的感情如何？」</p>
 
-<p>最後，問題的態度也很重要。應該保持開放和誠實的態度，願意接受塔羅牌的指引和建議，而不是試圖驗證自己的想法或假設。這樣可以幫助您得到更明確和有用的答案。</p>
+<p>問題的態度也很重要。應該保持開放和誠實的態度，願意接受塔羅牌的指引和建議，而不是試圖驗證自己的想法或假設。這樣可以幫助您得到更明確和有用的答案。</p>
 
 <h3>避免的問題類型</h3>
 
@@ -103,7 +103,7 @@
 
 <p>也不要問別人的私隱，因為占卜是用來解答自己的問題，如果問別人的私隱就不會得到準確的答案。也不要問犯罪的事情，因為占卜不是用來幫助犯罪的，如果問犯罪的事情就不會得到準確的答案。</p>
 
-<p>總的來說，塔羅問題的問法需要注意很多細節。只要注意這些細節，就可以得到明確和有用的答案。</p>
+
 
 <h2>塔羅牌問題的意義是什麼？</h2>
 
@@ -121,17 +121,17 @@
 
 <p>在塔羅占卜中，問問題的方式非常重要。要避免問到別人的私隱，需要注意問題的界定、避免假設性問題、聚焦於自己、使用中性語言和尊重塔羅師的界限。</p>
 
-<p>首先，問題的界定應該明確、具體和尊重他人的隱私。應該避免問關於他人的敏感話題，例如感情生活、財務狀況等。這類問題不僅侵犯他人的隱私，也可能導致塔羅牌的解讀不準確。</p>
+<p>問題的界定應該明確、具體和尊重他人的隱私。應該避免問關於他人的敏感話題，例如感情生活、財務狀況等。這類問題不僅侵犯他人的隱私，也可能導致塔羅牌的解讀不準確。</p>
 
-<p>其次，應該避免假設性問題。假設性問題可能會導致塔羅師無法正確回答，甚至誤解問題的意義。例如，問「如果我跟他在一起，會不會幸福？」這類問題就是假設性問題。</p>
+<p>應該避免假設性問題。假設性問題可能會導致塔羅師無法正確回答，甚至誤解問題的意義。例如，問「如果我跟他在一起，會不會幸福？」這類問題就是假設性問題。</p>
 
-<p>另外，聚焦於自己的想法和感受也非常重要。在問塔羅問題時，應該聚焦於自己的想法和感受，而不是他人的想法或感受。這樣可以避免侵犯他人的隱私，也可以讓塔羅師更好地理解問題的背景和意義。</p>
+<p>聚焦於自己的想法和感受也非常重要。在問塔羅問題時，應該聚焦於自己的想法和感受，而不是他人的想法或感受。這樣可以避免侵犯他人的隱私，也可以讓塔羅師更好地理解問題的背景和意義。</p>
 
 <p>使用中性語言也是非常重要的。在問塔羅問題時，應該使用中性語言，避免使用帶有偏見或假設的語言。例如，問「他是否喜歡我？」而不是「他為什麼不喜歡我？」這樣可以避免帶入自己的情感和假設，得到更準確的占卜結果。</p>
 
-<p>最後，尊重塔羅師的界限也非常重要。在問塔羅問題時，應該尊重塔羅師的專業判斷，如果塔羅師認為某個問題不適合詢問或可能侵犯他人的隱私，應該尊重其意見並避免詢問。</p>
+<p>尊重塔羅師的界限也非常重要。在問塔羅問題時，應該尊重塔羅師的專業判斷，如果塔羅師認為某個問題不適合詢問或可能侵犯他人的隱私，應該尊重其意見並避免詢問。</p>
 
-<p>總的來說，問塔羅問題需要注意問題的界定、避免假設性問題、聚焦於自己、使用中性語言和尊重塔羅師的界限。這樣可以避免問到別人的私隱，也可以讓塔羅師更好地理解問題的背景和意義，提供更準確的占卜結果。</p>
+
 
 <h2>塔羅問題該如何問才能得到有關自己的事業的答案？</h2>
 
@@ -139,13 +139,13 @@
 
 <p>要得到有關自己的事業的答案，問題應該聚焦在自己身上。塔羅占卜的命題最好著重於「我該如何做」，將問題聚焦在自己身上，畢竟自己起而行比寄望他人行動還要再實際一些。例如，可以問「我該如何改善自己的工作表現？」或「我該如何找到新的工作機會？」</p>
 
-<p>此外，問題應該盡量具體和明確，避免籠統的問題。例如，問「我如何才能在事業上取得成功？」而不是「我如何才能幸福？」籠統的問題可能會導致占卜師無法提供準確的答案。</p>
+<p>問題應該盡量具體和明確，避免籠統的問題。例如，問「我如何才能在事業上取得成功？」而不是「我如何才能幸福？」籠統的問題可能會導致占卜師無法提供準確的答案。</p>
 
 <p>在設定問題時，也應該考慮自己的情況和目標。例如，如果你正在找工作，問題應該是「我如何才能找到適合自己的工作？」而不是「我如何才能找到一份高薪工作？」</p>
 
 <p>塔羅牌占卜可以提供一種超然的角度，讓人們在做決定時能夠更全面地考慮各種可能性。因此，在設定問題時，應該避免情緒化和限制，讓占卜師可以提供更寬廣的視野與指引。</p>
 
-<p>最後，問題應該使用正面的語言，以便得到正面的答案。例如，問「我如何才能在事業上取得成功？」而不是「我如何才能避免失敗？」</p>
+<p>問題應該使用正面的語言，以便得到正面的答案。例如，問「我如何才能在事業上取得成功？」而不是「我如何才能避免失敗？」</p>
 
 <p>設定問題的過程中，也應該考慮到塔羅牌占卜的角色。塔羅占卜可以提供更寬廣的視野與指引，但最終的抉擇還是在我們自己手中，占卜是一種有效的顧問，但不應讓它完全主導我們的人生決策。</p>
 
