--- a/塔羅牌問題參考/index.html
+++ b/塔羅牌問題參考/index.html
@@ -99,41 +99,29 @@
 
 <p>問題設定的時間設定也很重要，通常占卜師默認6個月已經是上限，如果3張小牌陣（特別是雷諾曼）基本上是立即發生。設定時間可以幫助占卜師更清楚有效時限。</p>
 
-<p>最後，問題設定應該謹記占卜是一種有效的顧問，但不應讓它完全主導我們的人生決策。塔羅牌占卜可以提供一種超然的角度，讓人們在做決定時能夠更全面地考慮各種可能性。</p>
+<p>問題設定應該謹記占卜是一種有效的顧問，但不應讓它完全主導我們的人生決策。塔羅牌占卜可以提供一種超然的角度，讓人們在做決定時能夠更全面地考慮各種可能性。</p>
 
 <h2>塔羅牌占卜中，什麼問題不該問？</h2>
 
 <p>塔羅牌占卜是一種自我反思的工具，透過牌卡的指導，可以幫助我們了解自己的情況和未來的走勢。然而，並不是所有的問題都適合用塔羅牌占卜來詢問。有些問題可能會導致占卜結果不準確或無法解釋，因此我們需要了解什麼問題不該問。</p>
 
-<p>首先，<strong>健康問題</strong>不該問。塔羅牌占卜不能用來預測健康問題，因為健康問題往往源自於心理狀態，而塔羅牌占卜只能協助你找到心理狀態的源頭。占卜健康問題可能會讓你受制於塔羅牌的指引，反而無法得到實際的幫助。</p>
 
-<p>其次，<strong>過去的事情</strong>也不該問。塔羅牌占卜不能用來占卜過去的事情，因為過去的事情已經發生，占卜無法改變結果。塔羅牌占卜是用來占卜未來的走勢和趨勢，而不是用來占卜過去的事件。</p>
 
-<p>此外，<strong>太長遠的未來</strong>也不該問。塔羅牌占卜不能用來占卜太長遠的未來，因為未來的事情有太多變數，占卜結果可能不準確。塔羅牌占卜是用來占卜短期內的走勢和趨勢，而不是用來占卜長期的未來。</p>
 
-<p>另外，<strong>與你無關的事物</strong>也不該問。塔羅牌占卜不能用來占卜與你無關的事物，因為你不是當事人，占卜結果可能不準確。塔羅牌占卜是用來占卜與你有關的事情，而不是用來占卜與你無關的事情。</p>
 
-<p>還有，<strong>瑣碎的日常</strong>也不該問。塔羅牌占卜不能用來占卜瑣碎的日常事情，因為這些事情往往無關緊要，占卜結果可能無法給你實際的幫助。塔羅牌占卜是用來占卜重要的事情，而不是用來占卜瑣碎的事情。</p>
+<p><strong>問題的問法很重要</strong>。如果問題的問法太直接或太籠統，占卜師無法提供有用的解讀。因此，問問題時應該從家庭、感情、工作等方面去問「有改變的空間」的問題。例如「我該如何改善我的工作？」、「我跟他的關係需要注意的地方？」。而不是問「他會不會劈腿」、「我幾歲會死」等問題。</p>
 
-<p>最後，<strong>特定領域的問題</strong>也不該問。塔羅牌占卜不能用來解答專業領域的問題，如醫療、法律、投資、生死、金融等。這些問題需要諮詢專業人士，才能得到準確的答案。</p>
+<p><strong>占卜師的背景知識很重要</strong>。占卜師的背景知識會影響其解讀的準確性。例如，對法律事務略知一二的占卜師，可以更具體地解讀與法律相關的問題。</p>
 
-<p>綜上所述，塔羅牌占卜中，有些問題不該問。這些問題包括健康問題、過去的事情、太長遠的未來、與你無關的事物、瑣碎的日常和特定領域的問題。只有了解什麼問題不該問，才能夠正確地使用塔羅牌占卜，得到準確的答案。</p>
+<p><strong>塔羅牌的解讀不是絕對的</strong>。塔羅牌的解讀取決於占卜師的能力和經驗，不同的占卜師可能會有不同的解讀。例如，聖杯A可以被解讀為「新感情、喜悅、快樂滿足」，也可以被解讀為「和解」。</p>
 
-<p>此外，還有一些問題不該問，如<strong>時間太久遠以後的問題</strong>、<strong>二元性的問題</strong>、<strong>與健康相關的問題</strong>、<strong>關於他人的問題</strong>、<strong>特定領域的問題</strong>和<strong>賭博／投資相關的問題</strong>。這些問題可能會導致占卜結果不準確或無法解釋，因此不該問。</p>
-
-<p>還有，<strong>問題的問法很重要</strong>。如果問題的問法太直接或太籠統，占卜師無法提供有用的解讀。因此，問問題時應該從家庭、感情、工作等方面去問「有改變的空間」的問題。例如「我該如何改善我的工作？」、「我跟他的關係需要注意的地方？」。而不是問「他會不會劈腿」、「我幾歲會死」等問題。</p>
-
-<p>另外，<strong>占卜師的背景知識很重要</strong>。占卜師的背景知識會影響其解讀的準確性。例如，對法律事務略知一二的占卜師，可以更具體地解讀與法律相關的問題。</p>
-
-<p>還有，<strong>塔羅牌的解讀不是絕對的</strong>。塔羅牌的解讀取決於占卜師的能力和經驗，不同的占卜師可能會有不同的解讀。例如，聖杯A可以被解讀為「新感情、喜悅、快樂滿足」，也可以被解讀為「和解」。</p>
-
-<p>最後，<strong>占卜師也有無法占卜的問題</strong>。占卜師的解讀能力取決於其對相關領域的了解程度，如果問題過於專業，占卜師無法提供準確的解讀。例如，官司會不會勝訴，這種問題需要律師的專業意見。</p>
+<p><strong>占卜師也有無法占卜的問題</strong>。占卜師的解讀能力取決於其對相關領域的了解程度，如果問題過於專業，占卜師無法提供準確的解讀。例如，官司會不會勝訴，這種問題需要律師的專業意見。</p>
 
 <h2>如何避免塔羅牌占卜中的常見錯誤？</h2>
 
 <p>塔羅牌占卜是一種需要專注和中立的心態的過程。占卜師需要保持中立的心態，不要受問卜者的情緒和能量影響。這樣可以避免占卜師自己的情緒和偏見影響對於牌的解讀和詮釋。</p>
 
-<p>另外，占卜師需要注意自己的能量狀態，避免負能量的影響。可以透過各種方法來調整能量，例如：深呼吸、運動、冥想等。這樣可以保持占卜師的能量平衡，不會影響對於牌的解讀和詮釋。</p>
+<p>占卜師需要注意自己的能量狀態，避免負能量的影響。可以透過各種方法來調整能量，例如：深呼吸、運動、冥想等。這樣可以保持占卜師的能量平衡，不會影響對於牌的解讀和詮釋。</p>
 
 <p>在塔羅牌占卜中，提問方式非常重要。錯誤的提問方式可能導致占卜結果不準確或無法得到想要的答案。因此，占卜師需要學習如何正確地提問，並避免模糊或不明確的提問。</p>
 
@@ -141,17 +129,17 @@
 
 <p>此外，占卜師需要保持客觀和中立的心態，不要受到問卜者的影響。需要保持獨立的思考和判斷，不要完全依賴占卜結果。</p>
 
-<p>最後，占卜師需要注意紀錄占卜結果。紀錄占卜結果可以幫助占卜師追蹤自己的進步和改善占卜技巧。需要透過紀錄來反思和改進占卜的技巧。</p>
+<p>占卜師需要注意紀錄占卜結果。紀錄占卜結果可以幫助占卜師追蹤自己的進步和改善占卜技巧。需要透過紀錄來反思和改進占卜的技巧。</p>
 
 <h3>常見錯誤</h3>
 
 <p>在塔羅牌占卜中，有一些常見錯誤需要避免。例如：過度依賴塔羅牌的預測結果、問錯問題、忽略自己的直覺和感覺等。這些錯誤可能導致占卜結果不準確或無法得到想要的答案。</p>
 
-<p>另外，占卜師需要注意自己的風格設定和形象表現。需要有明確的風格設定和形象表現，以避免吸引來不合適的客人。</p>
+<p>占卜師需要注意自己的風格設定和形象表現。需要有明確的風格設定和形象表現，以避免吸引來不合適的客人。</p>
 
 <p>占卜師也需要注意自己的能量調整。需要定期淨化自己，避免負能量的累積。這樣可以保持占卜師的能量平衡，不會影響對於牌的解讀和詮釋。</p>
 
-<p>總的來說，塔羅牌占卜是一種需要專注和中立的心態的過程。占卜師需要注意自己的能量狀態、提問方式、牌的位置和組合等因素，以避免常見錯誤和得到準確的占卜結果。</p>
+
 
 <h2>塔羅牌占卜的適用範圍是什麼？</h2>
 
