--- a/塔羅牌感情問題參考/index.html
+++ b/塔羅牌感情問題參考/index.html
@@ -85,23 +85,19 @@
 
 <p>塔羅牌感情問題參考可以幫助人們了解自己和對方的想法和感受，從而更好地溝通和理解彼此的需求和期望。透過塔羅牌的占卜，可以分析感情關係的優缺點，找出問題所在，並提供改善的建議。</p>
 
-<p>塔羅牌感情問題參考還可以預測感情關係的發展趨勢，讓人們更好地準備和應對未來的挑戰。同時，塔羅牌可以提供感情問題的解決方案，幫助人們找到合適的方法來處理感情上的困擾。</p>
 
-<p>此外，塔羅牌感情問題參考還可以增進自我認識和自我成長，讓人們更好地了解自己和自己的需求。透過塔羅牌的占卜，可以了解對方的真實想法和感受，避免誤會和誤解。</p>
-
-<p>塔羅牌感情問題參考還可以幫助人們找到合適的溝通方式，改善人際關係。同時，塔羅牌可以釋放感情上的困擾，讓人們更好地面對未來的挑戰。</p>
 
 <h3>自我發現和情感釋放</h3>
 
 <p>塔羅牌感情問題參考可以幫助人們進行自我發現，了解自己的情感需求和界限。透過塔羅牌的占卜，可以釋放壓抑的情感，讓人們更好地面對和處理感情問題。</p>
 
-<p>塔羅牌感情問題參考還可以幫助人們認識自己的情感模式和習慣，從而更好地控制和管理自己的情感。同時，塔羅牌可以幫助人們做出更好的感情決策，了解自己的情感需求和界限。</p>
+
 
 <h3>關係分析和決策指引</h3>
 
 <p>塔羅牌感情問題參考可以幫助人們分析與伴侶之間的關係，透過不同的牌陣，可以看到彼此之間的互動模式、潛在問題及未來的發展方向。</p>
 
-<p>塔羅牌感情問題參考還可以提供決策指引，幫助人們評估利弊，做出明智的決策。無論是選擇繼續一段關係，還是考慮結束一段感情，塔羅牌都能提供不同的視角。</p>
+
 
 <h2>塔羅占卜的過程是怎樣的?</h2>
 
@@ -113,7 +109,7 @@
 
 <p>抽牌是塔羅占卜的關鍵步驟。抽牌的方式有很多種，可以依造占卜問題的需求去選擇。牌陣的佈局也是塔羅占卜的重要步驟。牌陣的佈局可以幫助占卜師更好地理解牌面的意義和提供更準確的占卜結果。</p>
 
-<p>最後，解讀牌面是塔羅占卜的最後一步。解讀牌面需要根據牌面的圖案、顏色和位置來解釋牌義。同時，占卜師需要使用直覺和牌面的象徵意義來進行解讀。塔羅占卜的結果可以是關於占卜者的未來、現在或過去的信息。</p>
+<p>解讀牌面是塔羅占卜的最後一步。解讀牌面需要根據牌面的圖案、顏色和位置來解釋牌義。同時，占卜師需要使用直覺和牌面的象徵意義來進行解讀。塔羅占卜的結果可以是關於占卜者的未來、現在或過去的信息。</p>
 
 <h3>塔羅牌的選擇</h3>
 
