--- a/塔羅可以問過去的事嗎/index.html
+++ b/塔羅可以問過去的事嗎/index.html
@@ -127,9 +127,9 @@
 
 <p>另一方面，應該避免問太籠統的問題，例如「我該怎麼辦？」或「我該選擇哪個選項？」，這樣的問題通常無法得到明確的答案。</p>
 
-<p>此外，塔羅牌占卜不是用來解釋原因，而是用來提供不同見解與思考方式的對話。因此，問「為什麼」通常無法得到明確的答案。</p>
+<p>塔羅牌占卜不是用來解釋原因，而是用來提供不同見解與思考方式的對話。因此，問「為什麼」通常無法得到明確的答案。</p>
 
-<p>最後，塔羅牌占卜應該被視為一種輔助工具，用來幫助自己了解內心的想法和感受，而不是把它當做唯一的依靠。因此，提問時應該保持理性的態度，不要過度依賴塔羅牌的答案。</p>
+<p>塔羅牌占卜應該被視為一種輔助工具，用來幫助自己了解內心的想法和感受，而不是把它當做唯一的依靠。因此，提問時應該保持理性的態度，不要過度依賴塔羅牌的答案。</p>
 
                       <br>
                       <div class="recommended" id="recommended">
