--- a/大天使神諭卡教學/index.html
+++ b/大天使神諭卡教學/index.html
@@ -89,13 +89,7 @@
 
 <p>大天使神諭卡的使用方法包括洗牌、切牌、抽牌等。使用者需要誠心默唸問題，依直覺從牌堆中隨意取一疊起來，得到的那張牌就是切牌。解讀牌卡時，需要注意牌上的圖像和文字，信任直覺和想法，將訊息說出。</p>
 
-<p>大天使神諭卡的牌義手冊中提到，閱讀牌卡上的文字和圖像，同時注意直覺和想法，將訊息說出。使用者需要相信自己的直覺，而不是依賴牌義手冊，這樣才能真正學好大天使神諭卡占卜。</p>
 
-<p>大天使神諭卡的淨化是必要的，可以使用擦拭法、水晶法、日曬法或其他方法來淨化牌卡。牌卡的保存也很重要，可以使用盒子、布袋或聖壇來收藏牌卡。</p>
-
-<p>大天使神諭卡可以用來祈求天使的守護，例如自己或家人生病，或要到醫院探望朋友，可選一張拉斐爾大天使的牌帶著，請求拉斐爾大天使治癒疾病，有重要事情商談時，則可選一張米迦勒大天使的牌帶在身邊，請求對方賜予勇氣及提供保護。</p>
-
-<p>大天使神諭卡的訊息有時或會比較抽象，需要多用點想像力，又或者天使其實是間接地對其他事情作出了提示也說不定！因此，使用者需要學習如何解讀牌卡上的訊息，才能真正掌握大天使神諭卡的奧秘。</p>
 
 <h2>如何辨識天使訊息？</h2>
 
@@ -105,7 +99,7 @@
 
 <p>你也可以透過靜心冥想來接收天使的訊息。在冥想中，你可以問天使問題，然後注意你的想法和感受。這可能是天使正在傳遞訊息給你。</p>
 
-<p>另外，當你看到天使數字時，請注意你的直覺和感受。這可能是天使正在試圖傳遞訊息給你。你可以透過詢問你的天使來了解數字的意義，例如，當你看到3和1的數字順序時，你可以問你的天使：「你試著要告訴我什麼？」</p>
+<p>當你看到天使數字時，請注意你的直覺和感受。這可能是天使正在試圖傳遞訊息給你。你可以透過詢問你的天使來了解數字的意義，例如，當你看到3和1的數字順序時，你可以問你的天使：「你試著要告訴我什麼？」</p>
 
 <p>你也可以透過記錄天使數字和相關的訊息來更好地理解天使的傳遞。這可能幫助你更好地理解天使的訊息，並得到更多的指引和幫助。</p>
 
