--- a/神諭卡可以占卜嗎/index.html
+++ b/神諭卡可以占卜嗎/index.html
@@ -127,7 +127,7 @@
 
 <p>在牌義深度上，塔羅牌的牌義較深入，涉及人生各個範疇，也包含了人生成長的道路；而神諭卡的牌義可能未能觸及問題的深入程度。同時，塔羅牌需要與使用者有連結；而神諭卡的連結程度取決於使用者與牌的關係。</p>
 
-<p>值得注意的是，神諭卡的牌卡設計通常每張牌面上只有簡單的圖像和文字，且每張牌的意義相對單一；而塔羅牌每張牌面上有多個象徵物和圖像，每張牌的意義也更加複雜和多層次。因此，神諭卡和塔羅牌在占卜方式、牌義深度、牌卡設計等方面都有所不同，使用者需要根據自己的需求和偏好選擇適合的占卜工具。</p>
+<p>神諭卡的牌卡設計通常每張牌面上只有簡單的圖像和文字，且每張牌的意義相對單一；而塔羅牌每張牌面上有多個象徵物和圖像，每張牌的意義也更加複雜和多層次。因此，神諭卡和塔羅牌在占卜方式、牌義深度、牌卡設計等方面都有所不同，使用者需要根據自己的需求和偏好選擇適合的占卜工具。</p>
 
                       <br>
                       <div class="recommended" id="recommended">
