--- a/神諭卡是甚麼/index.html
+++ b/神諭卡是甚麼/index.html
@@ -119,29 +119,9 @@
 
 <p>神諭卡的分支體系非常豐富，有非常多神諭卡創作者，卡牌的信息和風格來自作者自己的經驗。例如，雷諾曼（Lenormand）神諭卡是由法國著名的預言家Marie Anne Adelaide Lenormand根據扑克牌進行改良創作的一副卡牌，於1846年首次發表。基博卡（Kipper）和西比拉（Sibilla）等其他神諭卡也各有不同的特點和用途。</p>
 
-<p>綜合以上所述，神諭卡的來源可能是多元的，受到塔羅牌、神靈信仰等不同因素的影響。然而，無論其來源如何，神諭卡都是一種用於占卜和自我反省的工具，能夠幫助使用者連結自然與超自然的場域及能量，感受宇宙的神聖能量。</p>
+<p>神諭卡的來源可能是多元的，受到塔羅牌、神靈信仰等不同因素的影響。然而，無論其來源如何，神諭卡都是一種用於占卜和自我反省的工具，能夠幫助使用者連結自然與超自然的場域及能量，感受宇宙的神聖能量。</p>
 
-<h2>如何選擇適合自己的神諭卡？</h2>
 
-<p>選擇適合自己的神諭卡是一個需要考慮多種因素的問題。首先，需要了解自己的需求和目的。例如，如果你想了解自己的性格特徵，可以選擇神靈天使體系的卡片；如果你想了解自己的命運，可以選擇神話傳說體系的卡片。</p>
-
-<p>另外，需要注意卡片的內容。卡片的圖像、文字和符號，是否與自己的需求和目的相符。例如，如果你想了解自己的感情關係，可以選擇具有愛情和關係主題的卡片。</p>
-
-<p>選擇適合自己的神諭卡也需要考慮卡片的風格。神諭卡有不同的風格，例如有些卡片具有濃厚的宗教色彩，有些卡片具有豐富的象徵意義。選擇適合自己的卡片風格，可以幫助你更好地理解和使用卡片。</p>
-
-<p>此外，需要考慮卡片的製作和來源。卡片的製作過程、材料和來源，是否符合自己的標準和需求。例如，如果你注重環保，可以選擇使用環保材料製作的卡片。</p>
-
-<p>最後，選擇適合自己的神諭卡需要考慮卡片的品質和可靠性。需要注意卡片的品質、正確性和可靠性，是否符合自己的需求和目的。例如，如果你想了解自己的未來，可以選擇具有高品質和可靠性的卡片。</p>
-
-<p>綜合考慮這些因素，可以幫助你選擇適合自己的神諭卡，從而更好地理解和使用卡片，達到自己的目的。</p>
-
-<p>值得注意的是，選擇適合自己的神諭卡是一個需要耐心和細心的過程。需要花時間和精力來研究和比較不同的卡片，才能找到最適合自己的卡片。</p>
-
-<p>另外，需要注意卡片的使用方法和注意事項。卡片的使用方法和注意事項，是否符合自己的需求和目的。例如，如果你想使用卡片來占卜，需要注意卡片的使用方法和注意事項，以避免誤用卡片。</p>
-
-<p>總之，選擇適合自己的神諭卡需要考慮多種因素，包括卡片的內容、風格、製作和來源、品質和可靠性等。需要花時間和精力來研究和比較不同的卡片，才能找到最適合自己的卡片。</p>
-
-<p>我發現我之前的回覆違反了您的要求，我將重新撰寫回覆，以符合您的要求。</p>
 
 <h2>如何選擇適合自己的神諭卡？</h2>
 
