--- a/雷諾曼塔羅差別/index.html
+++ b/雷諾曼塔羅差別/index.html
@@ -95,11 +95,11 @@
 
 <p>在占卜風格方面，雷諾曼塔羅的占卜風格更加直白，塔羅牌的占卜風格較為靈性化。雷諾曼塔羅的直白風格更容易達到直覺占卜，塔羅牌需要消化大量知識，才能達到直覺式占卜。</p>
 
-<p>此外，雷諾曼塔羅的牌卡圖像不會影響解牌的結果，而塔羅牌的牌面圖案則會對解牌的結果產生影響。雷諾曼塔羅的牌陣創作自由度較低，通常只能使用固定的牌陣，而塔羅牌可以創作無限的牌陣組合。</p>
+<p>雷諾曼塔羅的牌卡圖像不會影響解牌的結果，而塔羅牌的牌面圖案則會對解牌的結果產生影響。雷諾曼塔羅的牌陣創作自由度較低，通常只能使用固定的牌陣，而塔羅牌可以創作無限的牌陣組合。</p>
 
 <p>在時間性的指示方面，雷諾曼塔羅比塔羅牌更能直接指出時間性，如果問題上想知道發生日子，雷諾曼塔羅會比塔羅牌更準確。雷諾曼塔羅的牌分為負面牌、好牌及中性牌，而塔羅牌則沒有明顯的分類。</p>
 
-<p>最後，雷諾曼塔羅與塔羅牌在靈性修行的需求方面也有所不同，塔羅牌需要定期培育靈性，而雷諾曼塔羅則不需要。</p>
+<p>雷諾曼塔羅與塔羅牌在靈性修行的需求方面也有所不同，塔羅牌需要定期培育靈性，而雷諾曼塔羅則不需要。</p>
 
 <h2>雷諾曼卡的圖像有什麼特殊之處？</h2>
 
@@ -129,7 +129,7 @@
 
 <p>雷諾曼卡的指示牌可以用來代表事件或狀態，例如工作、愛情、金錢等。然而，塔羅牌的指示牌則可以用來代表人物、事件或狀態，具有更廣泛的意義。</p>
 
-<p>總的來說，雷諾曼卡和塔羅牌具有不同的使用方式和特點。雷諾曼卡更加適合新手入門，具有簡單易懂的圖像和牌卡意義，而塔羅牌則具有更加複雜和深層次的意義，適合於更深入的占卜和自我探索。</p>
+
 
 <h3>雷諾曼卡的牌卡屬性</h3>
 
