--- a/雷諾曼是塔羅牌嗎/index.html
+++ b/雷諾曼是塔羅牌嗎/index.html
@@ -99,7 +99,7 @@
 
 <p>雷諾曼卡的牌卡數量也與塔羅牌不同，雷諾曼卡只有36張牌，而塔羅牌有78張牌。雷諾曼卡的牌卡數量較少，學習上較不會有負擔。</p>
 
-<p>最後，雷諾曼卡的占卜風格也與塔羅牌不同，雷諾曼卡的占卜風格更加直白，塔羅牌的占卜風格則較為靈性化。</p>
+<p>雷諾曼卡的占卜風格也與塔羅牌不同，雷諾曼卡的占卜風格更加直白，塔羅牌的占卜風格則較為靈性化。</p>
 
 <h2>雷諾曼卡的圖像與牌意如何解讀？</h2>
 
@@ -131,11 +131,11 @@
 
 <p>在使用方法上，塔羅牌需要運用直覺和感性，依靠牌面圖畫和元素來解釋占卜的結果。塔羅牌的解讀需要考慮牌卡的象徵物、故事、牌面圖像等，需要有一定的基礎知識和經驗。相比之下，雷諾曼卡的使用方法則是直接地以文字表明每個畫面的象徵意義，再配合建議擺陣閱讀，基本上，新手自學都很容易上手。</p>
 
-<p>另外，塔羅牌的牌面有多層次的意義，可以跨用途時串連起來，在身心靈三個時空，又有和而不同的意義。相比之下，雷諾曼卡的牌面意義比較直接，使用者可以直接以文字表明每個畫面的象徵意義。</p>
+<p>塔羅牌的牌面有多層次的意義，可以跨用途時串連起來，在身心靈三個時空，又有和而不同的意義。相比之下，雷諾曼卡的牌面意義比較直接，使用者可以直接以文字表明每個畫面的象徵意義。</p>
 
 <p>在牌陣組合上，塔羅牌可以制作無限的牌陣組合，可以隨心自行創作。相比之下，雷諾曼卡的牌陣組合受限，通常使用固定的牌陣，如兩張牌、五張牌、七張牌等。</p>
 
-<p>總的來說，塔羅牌和雷諾曼卡在結構和使用方法上有著明顯的差異，塔羅牌需要有一定的基礎知識和經驗，相比之下，雷諾曼卡則是比較簡單易用。</p>
+
 
 <p>我發現我之前的回覆包含了一個不被允許的詞彙，所以我重新編輯我的回覆如下：</p>
 
