--- a/缺乏安全感的人的特徵/index.html
+++ b/缺乏安全感的人的特徵/index.html
@@ -119,19 +119,19 @@
 
 <p>要獲得安全感，我們需要學會選擇並負責。安全感是人在自然奮鬥中主宰行動並對行為後果負責的過程。做出自己的選擇，完成目標並對選擇的結果負責，可以使個體獲得掌控感進而促進個體內在安全感的構建。</p>
 
-<p>另外，完善人格，建立獨立安全感也是非常重要的。建立完善的人格被視為“自我成長”的終極目標。拥有完善的人格，意味著對“自我”有穩定的確定感，可以抵禦因外界環境、評價發生變化時產生的焦慮和不安感；拥有完善的人格是建立獨立安全感的重要基礎，“獨立”意味著個體的安全感由其內部產生，不依賴外界環境或他人，具有穩定性和恆常性。</p>
+<p>完善人格，建立獨立安全感也是非常重要的。建立完善的人格被視為“自我成長”的終極目標。拥有完善的人格，意味著對“自我”有穩定的確定感，可以抵禦因外界環境、評價發生變化時產生的焦慮和不安感；拥有完善的人格是建立獨立安全感的重要基礎，“獨立”意味著個體的安全感由其內部產生，不依賴外界環境或他人，具有穩定性和恆常性。</p>
 
-<p>同時，培養生存技能，建立現實基礎也是獲得安全感的關鍵。安全感的建立需要一定的現實基礎，一般情況下，朝不保夕、風餐露宿、居無定所的生存狀態很難會感受到安全。培養基本的生存技能，是建立安全感的現實基礎。雖然安全感核心在“感”，是一種主觀體驗，但是客觀世界依舊是主觀體驗的基礎，为自己營造穩定、安全、有秩序的生存環境，有助於安全感的建立。</p>
+<p>培養生存技能，建立現實基礎也是獲得安全感的關鍵。安全感的建立需要一定的現實基礎，一般情況下，朝不保夕、風餐露宿、居無定所的生存狀態很難會感受到安全。培養基本的生存技能，是建立安全感的現實基礎。雖然安全感核心在“感”，是一種主觀體驗，但是客觀世界依舊是主觀體驗的基礎，为自己營造穩定、安全、有秩序的生存環境，有助於安全感的建立。</p>
 
 <p>此外，嘗試小“冒險”，體驗“幸存”也有助於建立安全感。缺乏安全感的人在人際關係中常因收不到及時的回應，擔憂關係的崩壞，表現出迴避、退縮，甚至是離開關係。訓練耐受一定水平的焦慮，嘗試小的“冒險”，體驗“幸存”有助於建立安全感。比如，當對方沒有及時回應時，嘗試讓耐受焦慮，試著相信對方雖然沒有及時回應，但依舊是在意、關注你的，當耐受過焦慮後，感受到對方的回應、關心，知道關係依舊是良好的，體驗到“幸存”。</p>
 
-<p>最後，尋求幫助也是獲得安全感的重要步驟。安全感的建立是系統而複雜的過程，可以通過他人的協助完成。比如，通過與心智健全、人格穩定的伴侶、朋友互動，在穩定、良好的關係中修復或重建安全感；在親友的幫助下無法完成或依舊有困難時，可以向專業人士尋求幫助。</p>
+<p>尋求幫助也是獲得安全感的重要步驟。安全感的建立是系統而複雜的過程，可以通過他人的協助完成。比如，通過與心智健全、人格穩定的伴侶、朋友互動，在穩定、良好的關係中修復或重建安全感；在親友的幫助下無法完成或依舊有困難時，可以向專業人士尋求幫助。</p>
 
 <h2>原生家庭對安全感有什麼影響？</h2>
 
 <p>原生家庭對安全感的影響是深遠的，父母的行為和態度會影響孩子的安全感。例如，父母的忽視、批評或打罵都可能會導致孩子缺乏安全感。父母的期待和評價也會影響子女的安全感，若父母對子女的期待過高，子女可能會感到壓力和焦慮，從而導致安全感的缺乏。</p>
 
-<p>另外，原生家庭的經驗也會影響一個人的安全感。例如，父母親的離婚、家暴或忽視都可能會導致孩子缺乏安全感和信任感。這種創傷經驗可能會導致孩子在成長過程中沒有得到穩定的照顧，從而影響其心理成長和安全感的建立。</p>
+<p>原生家庭的經驗也會影響一個人的安全感。例如，父母親的離婚、家暴或忽視都可能會導致孩子缺乏安全感和信任感。這種創傷經驗可能會導致孩子在成長過程中沒有得到穩定的照顧，從而影響其心理成長和安全感的建立。</p>
 
 <p>原生家庭的氛圍和文化也會影響孩子的安全感。例如，一個充滿批評和指責的家庭環境可能會導致孩子缺乏安全感和自信心。父母的溝通方式和情感支持也會影響孩子的安全感，若父母能夠提供足夠的情感支持和應對策略，孩子可能會感到安全和被保護。</p>
 
